--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -42,7 +42,7 @@
                 <div class="header-name">
                   <div class="header-name-bottom">
                     <div class="img-name">
-                      <img src="../img/avatar/avatar.jpg" alt="#" />
+                      <img src="img/avatar/avatar.jpg" alt="#" />
                     </div>
                     <div class="infomatin-cv">
                       <h1>Quang Phuoc</h1>
